--- a/InteractiveWelcome/App.config
+++ b/InteractiveWelcome/App.config
@@ -1,6 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+    <appSettings>
+        <add key="LDAPServerAddress" value=""/>
+        <add key="AdminGroupName" value=""/>
+        <add key="UserGroupName" value=""/>
+        <add key="Port" value=""/>
+    </appSettings>
 </configuration>
