--- a/InteractiveWelcome/packages.config
+++ b/InteractiveWelcome/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ActiveDirectoryAuthentication" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Management.Infrastructure" version="1.0.0" targetFramework="net461" />
 </packages>
